2004-10-28  Sebastien Pouliot  <sebastien@ximian.com>

	* KeyPairPersistence.cs: Added localization for exceptions messages.
	Also added more details (type and path) when an exception is thrown.

2004-09-29  Sebastien Pouliot  <sebastien@ximian.com>

	* RSAManaged.cs: In synch with corlib. KeySize is now always a 
	multiple of 8 bits. Fix #66929.

2004-09-17  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConvert.cs: In synch with corlib version. Fixed all level 4 
	compilation warnings.
	* KeyPairPersistence.cs: In synch with corlib version. Fixed all level
	4 compilation warnings.
	* PKCS1.cs: In synch with corlib version. Fixed all level 4 
	compilation warnings.
	* SHA224Managed.cs: Fixed all level 4 compilation warnings.

2004-09-17  Sebastien Pouliot  <sebastien@ximian.com>

	* SHA224.cs: New. Abstract class for all SHA224 implementations.
	* SHA224Managed.cs: New. Managed implementation of SHA224 (a SHA256
	derivate) as specified in RFC3874 and FIPS 180-2 Change Notice.

2004-06-23  Sebastien Pouliot  <sebastien@ximian.com>

	* SymmetricTransform.cs: Reduce by one the number of block when 
	decrypting. This operation was in CryptoStream before but is only
	required for decryption (which CryptoStream can't know). 
	Fix bug #60573.

2004-05-27  Sebastien Pouliot  <sebastien@ximian.com>

	* ARC4Managed.cs: Added missing exception handling in TransformBlock 
	and TransformFinalBlock.
	* SymmetricTransform.cs: Fixed possible integer overflow. Added 
	missing exception handling in TransformBlock and TransformFinalBlock.

2004-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* PKCS8.cs: Fixed negative Version check.
	* MD2Managed.cs: Added readonly to static array constants.
	* MD4Managed.cs: Removed unrequired memory allocation in MD4Transform.

2004-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConvert.cs: Added support for truncated, but still valid, RSA
	private key blob. Fix #57941 (couldn't sign with nunit key).